--- a/index.html
+++ b/index.html
@@ -733,6 +733,7 @@
                                     <li>Independently built and maintained RedHat OpenStack labs for R&D.</li>
                                     <li>Collaborated with international teams on SDN/NFV standardization efforts.</li>
                                 </ul>
+                                <button class="show-more-btn">Show More</button>
                             </div>
                         </div>
                     </div>
@@ -754,6 +755,7 @@
                                     <li>Conducted technical product demonstrations for multiple enterprise clients.</li>
                                     <li>Implemented OpenStack and OpenShift on bare metal using Triple O Architecture.</li>
                                 </ul>
+                                <button class="show-more-btn">Show More</button>
                             </div>
                         </div>
                     </div>
@@ -775,6 +777,7 @@
                                     <li>Conducted comprehensive testing of Cisco ASA firewalls and security appliances.</li>
                                     <li>Built a strong foundational expertise in enterprise networking and security.</li>
                                 </ul>
+                                <button class="show-more-btn">Show More</button>
                             </div>
                         </div>
                     </div>
