--- a/index.html
+++ b/index.html
@@ -40,35 +40,64 @@
             overflow: hidden;
         }
 
-        /* --- Sticky Top Navigation --- */
-        .top-nav {
-            position: sticky;
+        /* --- Sticky Top Bar (brand + menu) --- */
+        .sticky-bar {
+            position: fixed;
             top: 0;
-            z-index: 900;
-            background: rgba(15, 23, 42, 0.9);
+            left: 0;
+            right: 0;
+            z-index: 1200;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 1rem;
+            padding: 0.5rem 1rem;
+            background: rgba(11, 18, 32, 0.95);
             backdrop-filter: blur(10px);
-            border-bottom: 1px solid rgba(45, 55, 72, 0.3);
+            border-bottom: 1px solid rgba(45, 55, 72, 0.4);
+            transform: translateY(-100%);
+            transition: transform 0.25s ease;
         }
-        .top-nav-list {
+        .sticky-bar.visible { transform: translateY(0); }
+        .sticky-brand {
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
+            min-width: 0;
+        }
+        .sticky-name {
+            font-family: 'Plus Jakarta Sans', sans-serif;
+            font-weight: 800;
+            color: #e2e8f0;
+            font-size: 1rem;
+            white-space: nowrap;
+        }
+        .sticky-contact {
+            display: none;
+            gap: 0.75rem;
+        }
+        .sticky-contact a { color: #99f6e4; text-decoration: none; font-weight: 600; font-size: 0.85rem; }
+        .sticky-contact i { color: #2dd4bf; }
+        .sticky-nav-list {
             list-style: none;
             display: flex;
             flex-wrap: wrap;
-            gap: 0.25rem 0.75rem;
+            gap: 0.25rem 0.5rem;
             margin: 0;
-            padding: 0.6rem 1rem;
-            justify-content: center;
+            padding: 0;
+            justify-content: flex-end;
         }
-        .top-nav-list a {
+        .sticky-nav-list a {
             color: #e2e8f0;
             text-decoration: none;
             font-weight: 600;
             font-size: 0.9rem;
-            padding: 0.45rem 0.8rem;
+            padding: 0.35rem 0.7rem;
             border-radius: 999px;
             transition: background 0.2s ease, color 0.2s ease;
         }
-        .top-nav-list a:hover { background: rgba(45, 212, 191, 0.15); color: #99f6e4; }
-        .top-nav-list a.active { background: rgba(45, 212, 191, 0.3); color: #0f172a; }
+        .sticky-nav-list a:hover { background: rgba(45, 212, 191, 0.15); color: #99f6e4; }
+        .sticky-nav-list a.active { background: rgba(45, 212, 191, 0.3); color: #0b1220; }
 
         /* --- Header --- */
         .header {
@@ -607,8 +636,10 @@
             .footer-social a { justify-content: flex-start; }
             .footer-stats { align-items: flex-start; }
             .footer-expertise { justify-content: flex-start; }
-            .top-nav-list { padding: 0.7rem 2rem; gap: 0.5rem 1rem; }
-            .top-nav-list a { font-size: 0.95rem; }
+            .sticky-bar { padding: 0.6rem 2rem; }
+            .sticky-contact { display: inline-flex; }
+            .sticky-name { font-size: 1.05rem; }
+            .sticky-nav-list a { font-size: 0.95rem; }
         }
 
         /* --- Dark Mode Styles --- */
@@ -689,7 +720,7 @@
         
         /* --- Print Stylesheet --- */
         @media print {
-            .top-nav { display: none; }
+            .sticky-bar { display: none; }
             body { font-family: 'Garamond', 'Times New Roman', serif; color: #000; background-color: #fff; padding: 0; }
             .container { box-shadow: none; max-width: 100%; border-radius: 0; }
             .header, .footer, .interests, .skill-bar, .show-more-btn, .modal-overlay, .patent-link i, .dark-mode-toggle { display: none; }
@@ -741,9 +772,17 @@
             </div>
         </header>
         
-        <!-- Sticky Section Navigation -->
-        <nav class="top-nav" role="navigation" aria-label="Resume sections">
-            <ul class="top-nav-list">
+        <!-- Sticky Compact Top Bar -->
+        <div class="sticky-bar" id="stickyBar" role="navigation" aria-label="Resume sections">
+            <div class="sticky-brand">
+                <span class="sticky-name">Venkata Guravareddy</span>
+                <div class="sticky-contact">
+                    <a href="mailto:bvguravareddy@gmail.com" aria-label="Email"><i class="fas fa-envelope" aria-hidden="true"></i></a>
+                    <a href="tel:+919884883957" aria-label="Phone"><i class="fas fa-phone" aria-hidden="true"></i></a>
+                    <a href="https://linkedin.com/in/bvguravareddy" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                </div>
+            </div>
+            <ul class="sticky-nav-list">
                 <li><a href="#profile">Profile</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -753,7 +792,7 @@
                 <li><a href="#certifications">Certifications</a></li>
                 <li><a href="#interests">Interests</a></li>
             </ul>
-        </nav>
+        </div>
 
         <!-- Main Content -->
         <main class="main-content">
@@ -1272,9 +1311,24 @@
                 updateToggleIcon();
             });
 
+            // --- Sticky bar show/hide on scroll ---
+            const stickyBar = document.getElementById('stickyBar');
+            let lastScrollY = window.scrollY;
+            const headerHeight = document.querySelector('.header')?.offsetHeight || 200;
+
+            function updateStickyVisibility() {
+                if (window.scrollY > headerHeight - 80) {
+                    stickyBar.classList.add('visible');
+                } else {
+                    stickyBar.classList.remove('visible');
+                }
+            }
+            updateStickyVisibility();
+            window.addEventListener('scroll', updateStickyVisibility, { passive: true });
+
             // --- Section Nav Active State ---
             const sections = document.querySelectorAll('main .section[id]');
-            const navLinks = document.querySelectorAll('.top-nav-list a');
+            const navLinks = document.querySelectorAll('.sticky-nav-list a');
             const linkMap = new Map(Array.from(navLinks).map(a => [a.getAttribute('href').slice(1), a]));
 
             const observer = new IntersectionObserver((entries) => {
@@ -1299,7 +1353,8 @@
                     const el = document.querySelector(targetId);
                     if (!el) return;
                     e.preventDefault();
-                    const y = el.getBoundingClientRect().top + window.scrollY - 70;
+                    const barHeight = stickyBar.offsetHeight || 0;
+                    const y = el.getBoundingClientRect().top + window.scrollY - (barHeight + 10);
                     window.scrollTo({ top: y, behavior: 'smooth' });
                 });
             });
